# autograder

./: README.md
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/admin/: admin.py
backend/app/dependencies/: db_dep.py  dependencies.py
backend/app/internal/: database.py  secrets.py
backend/app/models/: models.py
backend/tests/: test_main.py
