[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Phoenix Sheppard <phoenixsheppard28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
