[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Phoenix Sheppard <phoenixsheppard28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
supabase = "^2.15.0"
uvicorn = "^0.34.2"
sqlmodel = "^0.0.24"
httpx = "^0.28.1"
pytest = "^8.3.5"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
